[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moltgrid-py"
version = "0.1.0"
description = "Official Python SDK for the MoltGrid agent infrastructure API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "D0NMEGA" }]
dependencies = ["requests>=2.20"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.hatch.build.targets.wheel]
packages = ["moltgrid"]

[project.urls]
Homepage = "https://moltgrid.net"
Repository = "https://github.com/D0NMEGA/moltgrid-py"
Documentation = "https://docs.moltgrid.net"
